# memrailslabs

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .vercelignore  CLAUDE.md  Dockerfile  README.md  console.html  docker-compose.yml  harness.html  mcp.html  memrails-compress.html  memrails-pricing-model-agnostic.html  memrails-scroll-agent-nopricing.html  memrails.md  mpp.html  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.core.json  tsconfig.json  vercel.json  vitest.config.ts
knowledge/: architecture.md  billing-model.md  collective.md  data-model.md  federation.md  governed-retrieval.md  index.md  memrails-contract-v0.1.md  non-goals.md  pricing.md  product.md  rails.md  roadmap.md  stack.md  temporal-retrieval.md
knowledge/claims/: auth.md  context-bundle.md  contract-v0.1.md  contradiction-example.md  evidence-floor.md  governed-scope.md  ledger-spine.md  memory-index.md  memory-retrieve.md  memory-supersession.md  metered-retrieval.md  no-quotas.md  packet-contract.md  planner-model.md  portable-release.md  rails-projections.md  retrieval-order.md  retrieval-quality.md
scripts/: check-core-boundary.ts  deploy-endpoint.ts  diff-authority.ts  export-ledger.ts  extract-marketing.ts  index-knowledge.ts  inspect-packet.ts  intent-index.ts  mcp-server.ts  mcp-stdio.ts  memrails.ts  migrate-authority.ts  run-query.ts  verify-local-package.ts
sdk/python/: README.md  pyproject.toml
sdk/python/memrails/: __init__.py
src/app/: globals.css  layout.tsx  page.tsx
src/lib/: cors.ts  paths.ts  runtime.ts
tests/: setup.ts
(+225 files in other folders)
