[project]
name = "memrails"
version = "0.1.1"
description = "MemRails Python SDK — governed memory retrieval for locally inferred agents."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["memrails"]
